added index title

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
-<head>
-  <title></title>
-  <meta>
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="utf-8">
+    <title>My second commit</title>
+  </head>
+  <body>
+    
+  </body>
 </html>
