--- a/index.html
+++ b/index.html
@@ -1,9 +1,53 @@
 <!DOCTYPE html>
-  <head>
-    <meta charset="utf-8">
-    <title>My second commit</title>
-  </head>
-  <body>
-    <h1>Start GitHub</h1>
-  </body>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>おしゃれなページ</title>
+  <link rel="stylesheet" href="css/style.css" />
+</head>
+<body>
+
+  <header>
+    <div class="container">
+      <h1 class="logo">MySite</h1>
+      <nav>
+        <ul class="nav-list">
+          <li><a href="#">ホーム</a></li>
+          <li><a href="#">サービス</a></li>
+          <li><a href="#">お問い合わせ</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+  <main>
+    <section class="hero">
+      <h2>ようこそ！</h2>
+      <p>シンプルで美しいWebデザイン</p>
+      <a href="#" class="btn">詳しく見る</a>
+    </section>
+
+    <section class="features">
+      <div class="feature-card">
+        <h3>高速</h3>
+        <p>パフォーマンス重視の設計。</p>
+      </div>
+      <div class="feature-card">
+        <h3>レスポンシブ</h3>
+        <p>スマホでも美しく表示。</p>
+      </div>
+      <div class="feature-card">
+        <h3>簡単管理</h3>
+        <p>使いやすいUIと設計。</p>
+      </div>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 MySite. All rights reserved.</p>
+  </footer>
+
+  <script src="js/script.js"></script>
+</body>
 </html>
